--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "packageManager": "pnpm@10.12.1",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
