feat: extend core structure

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "typegen": "next typegen",
     "analyze": "ANALYZE=true pnpm build",
     "lint:check:types": "tsc --noEmit",
     "lint:check:js": "eslint .",
@@ -24,7 +25,10 @@
     "lint:fix:format": "prettier \"**/*.{json,md}\" --write",
     "lint": "pnpm run \"/^lint:check:.*/\"",
     "lint:fix": "pnpm run \"/^lint:fix:.*/\"",
-    "version": "changeset version && pnpm install --no-frozen-lockfile",
+    "generate:icons": "pnpm run svgr:icons && eslint --fix src/components/icons/*.{ts,tsx}",
+    "generate:vectors": "pnpm run svgr:vectors && eslint --fix src/components/vectors/**/*.{ts,tsx}",
+    "svgr:icons": "svgr --config-file ./scripts/svg/icon.svgr.config.cjs src/assets/icons",
+    "svgr:vectors": "svgr --config-file ./scripts/svg/vector.svgr.config.cjs src/assets/vectors",
     "ci:review": "pnpm run lint",
     "prepare": "husky",
     "precommit": "lint-staged"
@@ -44,6 +48,7 @@
     "@commencis/ts-config": "1.0.0",
     "@commitlint/cli": "20.4.1",
     "@next/bundle-analyzer": "16.1.6",
+    "@svgr/cli": "8.1.0",
     "@types/node": "24.10.11",
     "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
