chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,17 @@
 
 # dependencies
 node_modules
-.pnp
-.pnp.js
-
-# testing
-coverage
-
-# production
-build
-dist
-storybook-static
 
 # next.js
 .next
 next-env.d.ts
+
+# env files
+.env*
+!.env.example
+
+# testing
+coverage
 
 # debug
 logs
@@ -24,21 +21,19 @@ npm-debug.log*
 pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
 # typescript
 *.tsbuildinfo
 
-# env files
-.env*
-!.env.example
+# storybook
+storybook-static
+*storybook.log
 
 # misc
 .DS_Store
 *.pem
 *.local
 .idea
-*storybook.log
 
 # prevent npm & yarn output while using pnpm
 package-lock.json
